# shotglass

./: .gitignore  DEMOS.md  Dockerfile  EXPERIMENTS.md  LICENSE  MOTIVATION.md  Makefile  NOTES.md  NOTES2.md  Pipfile  README.md  README2.md  ROADMAP.md  TECH.md  TODO.md  code-over-time.md  databases.md  docker-compose.yml  features.md  pylintrc  redis-table.md  req_info.py  requirements.txt  setup.cfg  shotglass.sublime-project  web-frameworks.md
2020/: Makefile  Pipfile  changegrid.py  projects.csv  test_summarize.py
2025/: .gitignore  GOALS-202503.md  Makefile  NOTES.md  TODO.md  alpine_stackplot.py  apie.py  aports.mak  assemble.py  dot_package_plot.py  ex-scatter.py  ex_mpl_grid.py  exstackplot.py  extract.py  gclone.sh  get_source.py  lib.py  main.py  model.py  parse.py  pkg_common.sql  pop_over_time.sql  popular-packages.sql  proj_stats.py  pyproject.toml  r_grid.py  r_scatter.py  release-package-count.sql  render.py  requirements.txt  srcgrid.py  stats-release-package.sql  stats.py  summary.sql  test_extract.py  (+6 more)
symbols/: CHANGES.md  GOALS-202504.md  GOALS-202506.md  ISSUES.md  Makefile  NOTES.md  build.sh  changes.py  commands.py  demo-test.sql  demo.sql  draw_symbols.sql  extreemap.py  git-list-all.sh  goodsource.py  list-symbols.sql  main.py  main2.py  main3.py  misc.py  plot_func_size.py  plot_sunburst.py  plot_sunburst2.py  plot_sunburst3.py  pylintrc  pyproject.toml  requirements.txt  run.py  state.py  stats.sh  summary-symbols.sql  summary.sql  test_db.py  test_goodsource.py  test_main.py  test_run.py  tox.ini
symbols/sample_code/: sample.py
(+466 files in other folders)
